--- a/sfg-pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sfg-pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>List of Vets</title>
 </head>
 <body>
 
-</body>
-    <h1 th:text="'List of Vets'">List of Vets</h1>
+<h2 th:text="'List of Vets'">List of Vets</h2>
 
-    <table>
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Firstname</th>
-            <th>Lastname</th>
-        </tr>
-        <tr th:each="vet : ${vets}" >
-            <td th:text="${vet.id}">999</td>
-            <td th:text="${vet.firstName}">Not</td>
-            <td th:text="${vet.lastName}">Found</td>
-        </tr>
-        </thead>
-    </table>
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 150px;">First Name</th>
+        <th style="width: 150px;">Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">Not</td>
+        <td th:text="${vet.lastName}">Found</td>
+    </tr>
+    </tbody>
+</table>
+
+</body>
+
+
 </html>
