--- a/sfg-pet-clinic-web/src/main/less/petclinic.less
+++ b/sfg-pet-clinic-web/src/main/less/petclinic.less
@@ -178,21 +178,28 @@ table td.action-column {
 }
 
 .deployment-status-deployed {
-  .label-success;
+    .badge;
+    .bg-success;
 }
 
 .deployment-status-incomplete {
-  .label-warning;
+    .badge;
+    .bg-warning;
 }
 
 .deployment-status-failed {
-  .label-danger;
+    .badge;
+    .bg-danger;
 }
 
 .deployment-status-deploying {
-  .label-info
+    .badge;
+    .bg-info;
 }
+
 .deployment-status-na {
+    .badge;
+    .bg-secondary;
 }
 
 .container-details-table th {
